[@mantine/core] Make header height of Modal and Drawer consistent to prevent layout shift when `withCloseButton` prop is changed

--- a/packages/@mantine/core/src/components/ModalBase/ModalBase.module.css
+++ b/packages/@mantine/core/src/components/ModalBase/ModalBase.module.css
@@ -17,6 +17,7 @@
   top: 0;
   background-color: var(--mantine-color-body);
   z-index: 1000;
+  min-height: rem(60px);
 
   @mixin rtl {
     --_pr: var(--mb-padding, var(--mantine-spacing-md));
